--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
+    "build:gh": "vite build --base=/Movie-App/",
+    "predeploy": "npm run build:gh",
     "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
